fix to stop horizontal scrolling on small screens

--- a/css/components/blocks/search/search.css
+++ b/css/components/blocks/search/search.css
@@ -3,6 +3,10 @@
  * This file is used to style the search block.
  */
 
+.search-form + h2 {
+  margin: 0 14px 1rem;
+}
+
 .search-block-form {
   display: none;
 }
@@ -60,13 +64,14 @@
 }
 .form-search {
   width: 26em;
+  max-width: calc(100vw - 6.25em);
   height: auto;
   margin: 0;
   padding: 0.5em 6.25em 0.5em 2.25em;
   border: 1px solid #dbdbdb;
   border-right: none;
   border-radius: 3px;
-  font-size: 0.875rem; /* 14px */
+  font-size: 0.875rem;
   line-height: normal;
   background: url(../../../../images/svg/search.svg) no-repeat 0.5em center #fff;
   background-size: 1.5em;
